# minima

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  context_window.json  maybe.js  maybe.ts  pyproject.toml
.claude/: settings.json
.codaph/: project.json
.codaph/mcp/: claude-code.json
.github/workflows/: catalog-snapshot.yml  ci.yml  prod.yml  release-cli.yml  staging.yml
agent/: task_set.py
bench/: README.md  run.ts
bench/assert/: check.ts  db.ts
bench/driver/: env.ts  headless.ts  mock_server.ts  rig.ts  scratch.ts
bench/flows/: f10_recovery_ladder.ts  f12_learning_loop.ts  f1_headless.ts  f4_cost_budget.ts  f5_task_dag_worktree.ts  f6_resume_lineage.ts  f7_permissions_plan.ts  f9_offline_reconnect.ts
bench/tasks/: calibration.jsonl  savings_ab.jsonl  tasks.jsonl
client_sdk/costit_client/: __init__.py  autocapture.py  client.py  errors.py
client_sdk/minima_client/: __init__.py  autocapture.py  client.py  errors.py
docs/: README.md  agent-core-architecture.md  agent-core-implementation-plan.md  api-reference.md  characteristics_of_a_good_plan.md  classifier-redesign-research.md  client-sdk.md  concepts.md  configuration.md  examples.md  feature-gap-analysis.md  feedback-loop-research.md  getting-started.md  goals-feature-plan.md  ground-truth-build-guide.md  ground-truth-tui-plan.md  harness-architecture.md  harness.md  multi-tenancy.md  observer-agent-research.md  operations.md  publishing.md  sdk-architecture.md  seeding.md  tui-rendering-strategy.md  tui-stability-input-plan.md  websearch-mini-projects.md
docs-site/: .dockerignore  Dockerfile  astro.config.mjs  nginx.conf  package-lock.json  package.json  tsconfig.json  vocs.config.ts
docs-site/components/: Accordion.tsx  Badge.tsx  Card.tsx  CardGroup.tsx  Frame.tsx  Note.tsx  PageHeader.tsx  Steps.tsx  Tabs.tsx  index.ts  sidebar.ts
docs-site/pages/: index.mdx
docs/BigPlan/: PLAN-retired.md  PLAN.md  README.md  characteristics-of-successful-plans.md  decision-inline-renderer.md  errors-list.md  harness-research.md  inline-rendering-brief.md  inline-ux-guide.md  launch-bug-retest-guide.md  minima-harness-application-guide.md  parallel-worktree-playbook.md  plan-loop-audit.md  playbook.md  pr-default-renderer.md  pr-opencode-sidebar.md  pr-prompt-echo.md  q_and_a.md  sources.md  spike-inline-panel.md  tui-manual-testing.md  workflow-diagrams.md
docs/Experimental/: issues.MD
docs/PLAN/: boosting-roadmap.md
docs/boosting/: p1-artifacts-plan.md  p2-loop-plan.md  p3-edit-plan.md  p4-rewind-plan.md  w4-bgjobs-plan.md  w4-compact2-plan.md  w4-editguard2-plan.md  w4-ttsr-plan.md  w4-typed-task-plan.md  w5-lsp-plan.md  wave2-preflight.md  wave4-preflight.md  waves-3-5-orchestration.md
examples/: 01_quickstart.sh  02_recommend_and_feedback.py  03_constraints_and_tradeoff.py  04_workflow.py  05_autocapture.py  06_routed_llm_call.py  07_multitenant_admin.py  README.md  agent_escalation.py  agent_escalation_learn.py  agent_gemini.py  agent_retention.py  agent_warmup.py  agent_warmup_vary.py  harness_multiturn.py  harness_warmup.py  metrics_demo.py  smoke_check.py  smoke_test.py
packaging/homebrew/: README.md  gen_resources.py  minima-harness.rb  minima.rb  render_formula.py  wheel_urls.py
runs/20260612_125009/: recall_debug.jsonl  strategies_run1.json  strategies_run2.json  strategies_run3.json  tasks.jsonl
runs/20260612_130252/: REPORT.md  recall_debug.jsonl  strategies_run1.json  strategies_run2.json  strategies_run3.json  strategies_run4.json  strategies_run5.json  summary.json  tasks.jsonl
runs/20260612_182838/: recall_debug.jsonl  strategies_run1.json  strategies_run2.json  tasks.jsonl
runs/20260612_183343/: REPORT.md  memory_audit.json  recall_debug.jsonl  strategies_run1.json  strategies_run2.json  strategies_run3.json  strategies_run4.json  strategies_run5.json  summary.json  tasks.jsonl
runs/20260615_101732/: REPORT.md  memory_audit.json  recall_debug.jsonl  strategies_run1.json  strategies_run2.json  strategies_run3.json  strategies_run4.json  strategies_run5.json  summary.json  tasks.jsonl
runs/20260624_103307/: memory_audit.json  recall_debug.jsonl  tasks.jsonl
runs/escalate_20260615_133108/: cold_probe.json  summary.json  tasks.jsonl
runs/escalate_20260615_134209/: REPORT.md  cold_probe.json  summary.json  tasks.jsonl
runs/escalation_20260612_201825/: REPORT.md  results.jsonl  summary.json
runs/playground_p1/: _manifest.json  calibration.json  feedback.json  health.json  models.json  recommend.json  savings.json  strategies.json  workflow.json
runs/retention_20260612_201828/: REPORT.md  results.jsonl  summary.json
runs/warmupvary_20260615_123818/: REPORT.md  summary.json  tasks.jsonl
scratch/: exa_search.py  litellm.py
scripts/: test-routing-web.ts  test-routing.sh  test-routing.ts  verify_venv_integrity.py
scripts/classifier/: annotate_regex.py  build_corpus.py  churn_replay.py  common.py  evaluate.py  seeds.py  train.py
scripts/eval/: classify_dataset.json  eval_classify.py
src/costit/: __init__.py  config.py  deps.py  logging.py  main.py
src/minima/: __init__.py  config.py  deps.py  logging.py  main.py  version.py
src/minima_harness/: LICENSE_PI  __init__.py
tests/: conftest.py  factories.py
tests/eval/: BENCHMARKS.md  CRITERIA.md  RESULTS.md  __init__.py  harness.py  judge_rescoring.py  learning_curve.py  llmrouterbench_config.py  prompt_length_benchmark.py  test_classifier_gates.py  test_dual_read_sweep.py  test_h2_learning_curve.py  test_llmrouterbench_savings.py  test_routerbench_savings.py
tests/harness/: test_agent_loop.py  test_anthropic_mapping.py  test_auth_reroute.py  test_cache.py  test_catalog_overlay.py  test_common_and_wire.py  test_compat.py  test_errors.py  test_goals.py  test_google_mapping.py  test_harness_memory.py  test_judge.py  test_live.py  test_mapping.py  test_minima_e2e.py  test_openai_compat_sse.py  test_openrouter_catalog.py  test_phase0_smoke.py  test_phase_a.py  test_phase_b.py  test_phase_c.py  test_provider_catalog.py  test_runtime.py  (+5 more)
(+743 files in other folders)
