[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minima"
version = "0.3.0"
description = "Recommend cheaper LLM models for a task to cut token cost, backed by Mubit memory."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Mubit" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "anyio>=4.4",
  "structlog>=24.1",
  "tenacity>=8.4",
  "mubit-sdk>=0.10.0",
  "psycopg2-binary>=2.9",
  "redis>=5.0",
]

[project.optional-dependencies]
reasoner-anthropic = ["anthropic>=0.40"]
reasoner-gemini = ["google-genai>=0.3"]
seed = ["datasets>=2.20", "huggingface-hub>=0.24"]
harness = ["anthropic>=0.40", "google-genai>=0.3"]
# keyring: OS-keychain credential storage for `minima-harness config` (graceful 0600-file
# fallback when no backend is present, so it stays optional).
tui = ["textual>=0.79", "keyring>=24"]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "textual>=0.79",
  "keyring>=24",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
minima-seed = "minima.seeding.run_seed:main"
minima-calibration-report = "minima.metrics.report:main"
minima-harness = "minima_harness.tui.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/minima", "src/minima_harness", "client_sdk/minima_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
  "live: requires a running Mubit runtime (make run-mubit)",
  "eval: slow offline evaluation (RouterBench)",
  "backends: requires live Postgres + Redis containers (make test-backends)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
# B008: FastAPI's Depends() in argument defaults is the intended idiom.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"src/minima/recommender/classify.py" = ["E501"] # regex pattern tables
"tests/eval/*" = [
  "E501",
  "E702",
] # dense report/format lines + compact numeric loops
"tests/live/*" = [
  "E501",
] # inline request bodies + progress prints in live e2e demos

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
