[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Distribution name on PyPI (the `minima` name is taken by an unrelated project). The import
# package stays `minima`; the CLI is `minima` / `minima-harness`.
name = "minima-cli"
version = "0.4.7"
description = "Minima CLI: cost-aware LLM model routing — recommend cheaper models, backed by Mubit memory."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "FSL-1.1-Apache-2.0" }
license-files = ["LICENSE"]
authors = [{ name = "Mubit" }]
keywords = ["llm", "routing", "cost-optimization", "model-router", "mubit", "agent"]
# No "License :: OSI Approved" classifier — FSL-1.1 is source-available, not OSI-open-source.
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
# Core = the recommender library + HTTP client. The server stack (fastapi/uvicorn/psycopg2/
# redis) lives in the `server` extra: Minima is a hosted service, so the public package's
# audience is CLI/library users hitting api.minima.sh — only the operator's container (and
# self-hosters) runs the API and needs `[server]`.
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "anyio>=4.4",
  "structlog>=24.1",
  "tenacity>=8.4",
  "mubit-sdk>=0.10.0",
]

[project.urls]
Homepage = "https://docs.minima.sh"
Documentation = "https://docs.minima.sh"
Repository = "https://github.com/mubit-ai/minima"
Issues = "https://github.com/mubit-ai/minima/issues"

[project.optional-dependencies]
# Run the Minima API server (operator/self-host only — hosted users don't need this).
server = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "psycopg2-binary>=2.9",
  "redis>=5.0",
]
reasoner-anthropic = ["anthropic>=0.40"]
reasoner-gemini = ["google-genai>=0.3"]
seed = ["datasets>=2.20", "huggingface-hub>=0.24"]
harness = ["anthropic>=0.40", "google-genai>=0.3"]
# keyring: OS-keychain credential storage for `minima-harness config` (graceful 0600-file
# fallback when no backend is present, so it stays optional).
tui = ["textual>=0.79", "keyring>=24"]
# dev pulls every runtime extra so the full test suite (server API tests, TUI, providers) runs.
dev = [
  "minima-cli[server,harness,tui]",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
# `minima` is the primary command (the "Minima CLI" agent); `minima-harness` is a kept alias.
minima = "minima_harness.tui.cli:main"
minima-harness = "minima_harness.tui.cli:main"
minima-seed = "minima.seeding.run_seed:main"
minima-calibration-report = "minima.metrics.report:main"

[tool.hatch.build.targets.wheel]
packages = ["src/minima", "src/minima_harness", "client_sdk/minima_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
  "live: requires a running Mubit runtime (make run-mubit)",
  "eval: slow offline evaluation (RouterBench)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
# B008: FastAPI's Depends() in argument defaults is the intended idiom.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"src/minima/recommender/classify.py" = ["E501"] # regex pattern tables
"tests/eval/*" = [
  "E501",
  "E702",
] # dense report/format lines + compact numeric loops
"tests/live/*" = [
  "E501",
] # inline request bodies + progress prints in live e2e demos

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
